--- a/SWD392_EventManagement/SWD392_EventManagement/appsettings.json
+++ b/SWD392_EventManagement/SWD392_EventManagement/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "SWD_392_Project": "server =(local);database =SWD_392_Project2;uid=sa;pwd=123123;Encrypt=False;TrustServerCertificate=True"
+    "SWD_392_Project": "Server=LAPTOP-7MBFLMH0\\DOTHANH;uid=sa;pwd=tT123412345;database=SWD_392_Project2;Integrated security=true; Encrypt=False; TrustServerCertificate=True"
   }
 }
